--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "typescript-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.8.4"
+    "@vitejs/plugin-vue": "^3.2.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.3",
+    "vue-tsc": "^1.0.9"
   },
   "dependencies": {
-    "prompt-sync": "^4.2.0"
+    "vue": "^3.2.41"
   }
 }
