--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "pinia": "^2.0.27",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
