--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "pinia": "^2.0.27",
+    "pinia-plugin-persistedstate": "^3.0.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
