--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "firebase": "^9.14.0",
     "pinia": "^2.0.27",
     "pinia-plugin-persistedstate": "^3.0.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
+    "vuefire": "^3.0.0-beta.2",
     "vue-tsc": "^1.0.9"
   },
   "dependencies": {
