--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "firebase": "^9.14.0",
     "pinia": "^2.0.27",
     "pinia-plugin-persistedstate": "^3.0.1",
+    "postcss-nested": "^6.0.0",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
-    "vuefire": "^3.0.0-beta.2",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.0.9",
+    "vuefire": "^3.0.0-beta.2"
   },
   "dependencies": {
     "dayjs": "^1.11.6",
